--- a/infinite-scroll/style.css
+++ b/infinite-scroll/style.css
@@ -52,7 +52,9 @@ h1 {
 
 .image-container img {
     width: 100%;
-    margin-top: 10px;
+    margin-top: 30px;
+    border-radius: 6px;
+    box-shadow: 0 -2px 6px rgba(59, 59, 59, 0.7);
 }
 
 /* Media Query for large smartphones */
