--- a/animated-navigation/style.css
+++ b/animated-navigation/style.css
@@ -1,12 +1,13 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Dosis&display=swap');
 
 :root {
-  --primaryColor: #fff;
+  --primaryColor: #e0e0e0;
   --navColor1: #21292c;
-  --navColor2: #aa3e39;
-  --navColor3: #aa6e39;
-  --navColor4: #236267;
-  --navColor5: #2c8437;
+  --navColor2: #0f340f;  
+  --navColor3: #1a971a;
+  --navColor4: #eb1d92;
+  --navColor5: #e95ead;
 }
 
 html {
@@ -16,11 +17,94 @@ html {
 body {
   margin: 0;
   background: #000;
-
+  font-family: 'Dosis', sans-serif;
+  font-size: 50px;
 }
 
 /* --- Navigation Menu ------------------------------ */
+/* --  Overlay --*/
+.overlay {
+  position: fixed;
+  z-index: 9;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0,0,0, 0.35);
+}
 
+/* --  Nav Menu Items --*/
+nav,
+nav ul {
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  list-style: none;
+}
+
+nav ul li {
+  height: 20%;
+  overflow: hidden;
+}
+
+nav li a {
+  position: relative;
+  top: 45%;
+  color: var(--primaryColor);
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  margin-bottom: 10px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  z-index: 10;
+}
+
+nav li a:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+nav li a::before {
+  content: "";
+  width: 25vw;
+  height: 3px;
+  background-color:  #e0e0e0;
+  position: absolute;
+  top: 47.5%;
+  left: 0;
+  opacity: 0;
+}
+
+nav li a:hover::before {
+  opacity: 1;
+}
+
+nav li:nth-of-type(1) {
+  background-color: var(--navColor1);
+}
+
+nav li:nth-of-type(2) {
+  background-color: var(--navColor2);
+}
+
+nav li:nth-of-type(3) {
+  background-color: var(--navColor3);
+}
+
+nav li:nth-of-type(4) {
+  background-color: var(--navColor4);
+}
+
+nav li:nth-of-type(5) {
+  background-color: var(--navColor5);
+}
 
 
 /* --- Menu Bars ------------------------------------ */
@@ -39,7 +123,7 @@ body {
 .bar3 {
   width: 35px;
   height: 2px;
-  background-color: #fff;
+  background-color: var(--primaryColor);
   margin: 8px 0;
   transition: 0.4s;
 }
@@ -74,7 +158,7 @@ section {
 }
 
 section#home {
-  background-image: url("https://images.unsplash.com/photo-1581453904507-626ddb717f14?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80");
+  background-image: url(./assets/images/background.jpg);
   background-size: cover;
   background-position: center center;
 }
@@ -85,10 +169,12 @@ section#home a {
   top: 1.5rem;
   left: 1.5rem;
   text-decoration: none;
-  font-size: 0.8rem;
+  text-transform: none;
+  font-size: 2.2rem;
   padding-bottom: 5px;
   color: var(--primaryColor);
-  border-bottom: 1px solid var(--primaryColor);
+  font-weight: bolder;
+  border-bottom: 3px solid var(--primaryColor);
 }
 
 section#about {
@@ -101,6 +187,11 @@ section#skills {
 
 section#projects {
   background-color: var(--navColor4);
+  word-spacing: 10px;
+}
+
+span {
+  margin: 0 20px;
 }
 
 section#contact {
